content/products/stash/0.6.0/reference/stash_version.md
---
title: Stash Version
menu:
  product_stash_0.6.0:
    identifier: stash-version
    name: Stash Version
    parent: reference
product_name: stash
menu_name: product_stash_0.6.0
section_menu_id: reference
info:
  version: 0.6.0
---

## stash version

Prints binary version number.

### Synopsis


Prints binary version number.

```
stash version [flags]
```

### Options

```
  -h, --help   help for version
```

### Options inherited from parent commands

```
      --alsologtostderr                  log to standard error as well as files
      --analytics                        Send analytical events to Google Analytics (default true)
      --log_backtrace_at traceLocation   when logging hits line file:N, emit a stack trace (default :0)
      --log_dir string                   If non-empty, write log files in this directory
      --logtostderr                      log to standard error instead of files
      --stderrthreshold severity         logs at or above this threshold go to stderr (default 2)
  -v, --v Level                          log level for V logs
      --vmodule moduleSpec               comma-separated list of pattern=N settings for file-filtered logging
```

### SEE ALSO
* [stash](/products/stash/0.6.0/reference/stash)	 - Stash by AppsCode - Backup your Kubernetes Volumes

